# wlight

./: .gitignore  Cargo.toml  README.md  flake.nix
assets/: io.github.wlight.desktop
crates/wlight-applet/: Cargo.toml
crates/wlight-applet/src/: main.rs
crates/wlight-backend/: Cargo.toml
crates/wlight-backend/src/: ddc.rs  gamma.rs  lib.rs
crates/wlight-core/: Cargo.toml
crates/wlight-core/src/: lib.rs
crates/wlight-daemon/: Cargo.toml
crates/wlight-daemon/src/: config.rs  main.rs  service.rs  state.rs
crates/wlight-dbus/: Cargo.toml
crates/wlight-dbus/src/: lib.rs
crates/wlightctl/: Cargo.toml
crates/wlightctl/src/: main.rs
dbus/: io.github.wlight.service.in
docs/: architecture.md
nix/: home-manager-module.nix  nixos-module.nix
systemd/: wlight.service.in
