[workspace]
resolver = "3"
members = [
  "crates/wlight-core",
  "crates/wlight-dbus",
  "crates/wlight-backend",
  "crates/wlight-daemon",
  "crates/wlightctl",
  "crates/wlight-applet",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "GPL-3.0-only"
repository = "https://github.com/ManiaciaChao/wlight"
publish = false

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.8"
bytemuck = "1.24"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
ddc-hi = { version = "0.4.1", default-features = false, features = ["ddc-i2c"] }
directories = "6.0"
eframe = { version = "0.35", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.48", default-features = false }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wayrs-client = "1.3.1"
wayrs-protocols = { version = "0.14.11", features = ["wlr-gamma-control-unstable-v1"] }
zbus = { version = "5.17", default-features = false, features = ["tokio"] }
zvariant = "5"
wlight-backend = { path = "crates/wlight-backend" }
wlight-core = { path = "crates/wlight-core" }
wlight-dbus = { path = "crates/wlight-dbus" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
