[package]
name = "wlight-applet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
crossbeam-channel.workspace = true
eframe = { workspace = true, features = ["default_fonts", "glow", "wayland"] }
tokio = { workspace = true, features = ["rt", "time"] }
wlight-dbus.workspace = true
zbus.workspace = true

[lints]
workspace = true
