[package]
name = "wlight-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "wlightd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wlight-backend.workspace = true
wlight-core.workspace = true
wlight-dbus.workspace = true
zbus.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
