[package]
name = "wlightctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wlight-core.workspace = true
wlight-dbus.workspace = true
zbus.workspace = true

[lints]
workspace = true
